Refactoring Java tests: 1-5